--- a/网课笔记/1.计算机硬件基础/计算机硬件基础.md
+++ b/网课笔记/1.计算机硬件基础/计算机硬件基础.md
@@ -172,3 +172,49 @@ CPU执行指令的方式，操作系统中学过。
 
 ## Cache
 
+和主存的映射关系，三个相连映射模式
+
+1. 直接相连映射
+2. 全相联映射
+3. 组相联映射
+
+![image-20220505172943775](计算机硬件基础.assets/image-20220505172943775.png)
+
+### Cache命中率
+
+### Cache淘汰算法
+
+- 先进先出算法
+- 最近最少算法
+- 随机算法
+
+### 考法：Cache的作用和地址映射
+
+![image-20220505173203504](计算机硬件基础.assets/image-20220505173203504.png)
+
+## 硬盘
+
+## 存储系统的存取方式
+
+### 各类存储器的存取方式
+
+![image-20220505173439057](计算机硬件基础.assets/image-20220505173439057.png)
+
+# 系统可靠性
+
+## 可靠性指标
+
+相关指标：
+
+- 失效率
+
+- 平均无故障时间 MTBF
+
+- 平均故障修复时间 MTTR
+
+- 可用性
+
+## 可靠性计算
+
+![image-20220505173723760](计算机硬件基础.assets/image-20220505173723760.png)
+
