--- a/网课笔记/5.数据通信技术/数据通信技术.md
+++ b/网课笔记/5.数据通信技术/数据通信技术.md
@@ -196,3 +196,40 @@ PCM分为采样，量化，编码三步
 
 ## 差错控制
 
+什么是码距：任意两个码字之间最少变化的二进制位数
+
+![image-20220506082636984](数据通信技术.assets/image-20220506082636984.png)
+
+### 奇偶校验
+
+![image-20220506082854947](数据通信技术.assets/image-20220506082854947.png)
+
+### 海明校验
+
+![image-20220506083119219](数据通信技术.assets/image-20220506083119219.png)
+
+取k最小值
+
+### CRC校验
+
+只检错，不纠错
+
+![image-20220506083833984](数据通信技术.assets/image-20220506083833984.png)
+
+![image-20220506083940099](数据通信技术.assets/image-20220506083940099.png)
+
+![image-20220506084002809](数据通信技术.assets/image-20220506084002809.png)
+
+最后发送的数据
+
+![image-20220506084047716](数据通信技术.assets/image-20220506084047716.png)
+
+### 差错控制技术的基本概念与特点
+
+![image-20220506084128689](数据通信技术.assets/image-20220506084128689.png)
+
+### 检验码计算与判断
+
+![image-20220506084523852](数据通信技术.assets/image-20220506084523852.png)
+
+海明码的得出可以看一下
