--- a/网课笔记/7.局域网技术/局域网技术.md
+++ b/网课笔记/7.局域网技术/局域网技术.md
@@ -144,7 +144,391 @@
 
 ### 千兆以太网
 
+100Mbps
+
 ![image-20220506095026663](局域网技术.assets/image-20220506095026663.png)
 
 ![image-20220506095035029](局域网技术.assets/image-20220506095035029.png)
+
+### 万兆以太网
+
+![image-20220509165017513](局域网技术.assets/image-20220509165017513.png)
+
+注意一下网络覆盖范围
+
+### 考法：各类传输介质的特点
+
+![image-20220509165118897](局域网技术.assets/image-20220509165118897.png)
+
+![image-20220509165129625](局域网技术.assets/image-20220509165129625.png)
+
+## 交换式以太网
+
+### 交换机
+
+![image-20220509165405149](局域网技术.assets/image-20220509165405149.png)
+
+### 交换机转发原理
+
+![image-20220509165613236](局域网技术.assets/image-20220509165613236.png)
+
+查表，根据源mac地址和端口来学习填表
+
+![image-20220509165753199](局域网技术.assets/image-20220509165753199.png)
+
+### 交换机转发方式
+
+![image-20220509165854924](局域网技术.assets/image-20220509165854924.png)
+
+### 交换机的分类
+
+![image-20220509165923355](局域网技术.assets/image-20220509165923355.png)
+
+## 冲突域和广播域
+
+### 局域网组网的网络设备
+
+![image-20220509170009761](局域网技术.assets/image-20220509170009761.png)
+
+### 冲突域和广播域
+
+左图中，a给b，c发信息，则b，c不能再发，他们在一个冲突域中
+
+而使用交换机就不会有这种冲突问题
+
+![image-20220509170139847](局域网技术.assets/image-20220509170139847.png)
+
+![image-20220509170148621](局域网技术.assets/image-20220509170148621.png)
+
+路由器分割广播域，因此左边的主机广播消息到不了右边
+
+### 考法
+
+![image-20220509170304158](局域网技术.assets/image-20220509170304158.png)
+
+## 堆叠和级联
+
+堆叠就是当作一台设备来管理
+
+![image-20220509170547933](局域网技术.assets/image-20220509170547933.png)
+
+## 链路聚合
+
+用来解决带宽不足的问题
+
+![image-20220509170839240](局域网技术.assets/image-20220509170839240.png)
+
+### 链路聚合规则
+
+![image-20220509170924517](局域网技术.assets/image-20220509170924517.png)
+
+### 考法：概念、作用和实现方式
+
+![image-20220509170938013](局域网技术.assets/image-20220509170938013.png)
+
+## 以太网供电POE
+
+![image-20220509171122478](局域网技术.assets/image-20220509171122478.png)
+
+![image-20220509171134680](局域网技术.assets/image-20220509171134680.png)
+
+# 虚拟局域网VLAN
+
+## 总览
+
+![image-20220509171253645](局域网技术.assets/image-20220509171253645.png)
+
+## VLAN的概念
+
+### 划分广播域的方法
+
+路由器划分：不是最好的解决方案
+
+![image-20220509171405315](局域网技术.assets/image-20220509171405315.png)
+
+交换机实现广播域划分（VLAN配置）
+
+![image-20220509171504527](局域网技术.assets/image-20220509171504527.png)
+
+### VLAN的概念
+
+![image-20220509171606095](局域网技术.assets/image-20220509171606095.png)
+
+### 考法：VLAN的作用
+
+![image-20220509171625754](局域网技术.assets/image-20220509171625754.png)
+
+## VLAN划分方式
+
+![image-20220509171801934](局域网技术.assets/image-20220509171801934.png)
+
+VLAN ID
+
+注意对主机透明
+
+![image-20220509171909889](局域网技术.assets/image-20220509171909889.png)
+
+### 基于端口的VLAN划分
+
+vlan对主机透明
+
+![image-20220509172118393](局域网技术.assets/image-20220509172118393.png)
+
+### 基于子网
+
+![image-20220509172200917](局域网技术.assets/image-20220509172200917.png)
+
+### 考法：VLANID和VLAN划分方式
+
+![image-20220509172217964](局域网技术.assets/image-20220509172217964.png)
+
+## VLAN标准802.1Q
+
+![image-20220509172331203](局域网技术.assets/image-20220509172331203.png)
+
+### 考法：
+
+![image-20220509172350879](局域网技术.assets/image-20220509172350879.png)
+
+## VLAN接口类型
+
+![image-20220509173538142](局域网技术.assets/image-20220509173538142.png)
+
+
+
+### 考法1：VLAN的接口类型
+
+![image-20220509173711092](局域网技术.assets/image-20220509173711092.png)
+
+# GVRP协议
+
+## 总览
+
+![image-20220509173807967](局域网技术.assets/image-20220509173807967.png)
+
+## GVRP的概念
+
+![image-20220509173840431](局域网技术.assets/image-20220509173840431.png)
+
+实现VLAN的自动注册，注销功能
+
+![image-20220509173923932](局域网技术.assets/image-20220509173923932.png)
+
+## GVRP的消息类型
+
+![image-20220509174021051](局域网技术.assets/image-20220509174021051.png)
+
+## GVRP定时器
+
+![image-20220509174056601](局域网技术.assets/image-20220509174056601.png)
+
+## GVRP的注册模式
+
+![image-20220509174356481](局域网技术.assets/image-20220509174356481.png)
+
+交换器学到的VLAN
+
+### 考法
+
+![image-20220509174426104](局域网技术.assets/image-20220509174426104.png)
+
+# 生成树协议STP
+
+## 总览
+
+![image-20220509174612997](局域网技术.assets/image-20220509174612997.png)
+
+## STP的概念
+
+### 产生背景
+
+网络通过冗余来提高可靠性，避免单点故障
+
+![image-20220509174749047](局域网技术.assets/image-20220509174749047.png)
+
+但是冗余链路会带来问题：
+
+物理环路会造成：
+
+- 广播风暴
+- 帧复制：收到重复帧
+- MAC表震荡：交换机A会受到两个同样MAC源的帧，从下面和上面来的，产生震荡
+
+![image-20220509174856555](局域网技术.assets/image-20220509174856555.png)
+
+### 概念
+
+相互交互BPDU
+
+![image-20220509175240002](局域网技术.assets/image-20220509175240002.png)
+
+### BPDU
+
+![image-20220509175225589](局域网技术.assets/image-20220509175225589.png)
+
+## STP协议的标准
+
+![image-20220509175413676](局域网技术.assets/image-20220509175413676.png)
+
+## STP协议的算法
+
+![image-20220509175525750](局域网技术.assets/image-20220509175525750.png)
+
+### 1.选择根网桥
+
+![image-20220509175546716](局域网技术.assets/image-20220509175546716.png)
+
+选出根网桥：比小
+
+![image-20220509175623719](局域网技术.assets/image-20220509175623719.png)
+
+如果想换可以修改优先级：要按照4096的倍数
+
+![image-20220509175651156](局域网技术.assets/image-20220509175651156.png)
+
+### 2.选择根端口
+
+需要是非根网桥上面的端口
+
+![image-20220509175801156](局域网技术.assets/image-20220509175801156.png)
+
+![image-20220509175852050](局域网技术.assets/image-20220509175852050.png)
+
+看D交换机哪个是根端口，路径开销一样比id哪个抵
+
+![image-20220509175951383](局域网技术.assets/image-20220509175951383.png)
+
+上面两个都一样，就比较直连的端口id（源端口）
+
+![image-20220509180146478](局域网技术.assets/image-20220509180146478.png)
+
+### 3.选择指定端口
+
+![image-20220509180237706](局域网技术.assets/image-20220509180237706.png)
+
+![image-20220509180401557](局域网技术.assets/image-20220509180401557.png)
+
+### 根据计算结果来阻塞
+
+![image-20220509180441272](局域网技术.assets/image-20220509180441272.png)
+
+### 考法：STP作用以及算法
+
+![image-20220509180513447](局域网技术.assets/image-20220509180513447.png)
+
+## STP端口状态的变化
+
+![image-20220509180641804](局域网技术.assets/image-20220509180641804.png)
+
+### 收敛时间
+
+![image-20220509180711199](局域网技术.assets/image-20220509180711199.png)
+
+## RSTP快速生成树协议
+
+加速网络收敛
+
+![image-20220509180822690](局域网技术.assets/image-20220509180822690.png)
+
+端口角色增加到4个
+
+![image-20220509180949318](局域网技术.assets/image-20220509180949318.png)
+
+## MSTP多生成树协议
+
+考虑加入VLAN
+
+![image-20220509181114046](局域网技术.assets/image-20220509181114046.png)
+
+## 考法
+
+### 各类生成树协议的对比
+
+![image-20220509181249781](局域网技术.assets/image-20220509181249781.png)
+
+# 无线局域网WLAN
+
+## 总览
+
+![image-20220509181700517](局域网技术.assets/image-20220509181700517.png)
+
+## 无线通信的分类
+
+![image-20220509181747190](局域网技术.assets/image-20220509181747190.png)
+
+## 无线局域网接入方式
+
+![image-20220509181911295](局域网技术.assets/image-20220509181911295.png)
+
+### 相关标准
+
+![image-20220509182105982](局域网技术.assets/image-20220509182105982.png)
+
+## 无线局域网标准
+
+### 2.4G频带
+
+![image-20220509182259450](局域网技术.assets/image-20220509182259450.png)
+
+## CSMA/CA协议
+
+隐蔽站问题
+
+![image-20220509182437027](局域网技术.assets/image-20220509182437027.png)
+
+暴露站问题
+
+![image-20220509182503523](局域网技术.assets/image-20220509182503523.png)
+
+![image-20220509182534392](局域网技术.assets/image-20220509182534392.png)
+
+### MAC子层协议
+
+802.11的MAC层
+
+![image-20220509182651269](局域网技术.assets/image-20220509182651269.png)
+
+### 考法：WLAN的MAC子层协议
+
+![image-20220509182715720](局域网技术.assets/image-20220509182715720.png)
+
+## WIFI安全
+
+![image-20220509182849790](局域网技术.assets/image-20220509182849790.png)
+
+### 加密
+
+![image-20220509183008487](局域网技术.assets/image-20220509183008487.png)
+
+![image-20220509183013726](局域网技术.assets/image-20220509183013726.png)
+
+### 考法1：加密方式
+
+![image-20220509183125016](局域网技术.assets/image-20220509183125016.png)
+
+一般都用的WPA2
+
+### 认证
+
+几种认证方式
+
+![image-20220509183308988](局域网技术.assets/image-20220509183308988.png)
+
+## AP和AC
+
+### 基本定义
+
+![image-20220509183448101](局域网技术.assets/image-20220509183448101.png)
+
+### WLAN的组网方式
+
+![image-20220509183553357](局域网技术.assets/image-20220509183553357.png)
+
+![image-20220509183829650](局域网技术.assets/image-20220509183829650.png)
+
+![image-20220509183942182](局域网技术.assets/image-20220509183942182.png)
+
+### 考法：AC和AP的相关要点
+
+![image-20220509184008572](局域网技术.assets/image-20220509184008572.png)
 
